# smtp-xoauth2-test-tool

./: Cargo.toml  README.md
.github/workflows/: rust.yml
endpoints/: Google  Microsoft
src/: auth_code_grant.rs  curl.rs  device_code_flow.rs  emailer.rs  error.rs  get_profile.rs  http_client.rs  interface.rs  main.rs  openid.rs  provider.rs  token_keeper.rs
src/http_client/: curl.rs  reqwest.rs
