[package]
name = "smtp-xoauth2-test-tool"
version = "1.0.0"
edition = "2021"
author = "Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"

[dependencies]
async-curl = "0.4"
async-trait = "0.1"
chrono = "0.4"
curl-http-client = "2.3"
derive-deref-rs = "0.1"
directories = "5.0"
env_logger = "0.11"
http = "1.1"
log = "0.4"
mail-send = "0.4"
oauth2 = { version = "5.0", default-features = false }
openidconnect = "4.0.1"
serde = "1.0"
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
tokio = { version = "1.36", features = ["rt"] }
