[package]
name = "smtp-xoauth2-test-tool"
version = "1.1.0"
edition = "2024"
author = "Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
curl-http-client = "2.4"
derive-deref-rs = "0.1"
directories = "6.0"
env_logger = "0.11"
extio = "0.1"
log = "0.4"
mail-send = "0.5"
oauth2 = { version = "5.0", default-features = false }
openidconnect = "4.0"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.9"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"
tokio = { version = "1.47", features = ["rt"] }
