[package]
name = "smtp-xoauth2-test-tool"
version = "1.4.0"
edition = "2024"
author = "Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
curl-http-client = "2.9"
derive-deref-rs = "0.1"
directories = "6.0"
env_logger = "0.11"
extio = "0.1"
log = "0.4"
mail-send = "0.6"
oauth2 = { version = "5.0", default-features = false }
openidconnect = { version = "4.0", default-features = false, features = ["accept-rfc3339-timestamps"] }
reqwest = "0.13"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.11"
strum = "0.28"
strum_macros = "0.28"
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt"] }
